--- a/tests/Libraries/bbcode_examples/box_with_surrounding_newlines.html
+++ b/tests/Libraries/bbcode_examples/box_with_surrounding_newlines.html
@@ -1,13 +1,13 @@
 Upper line text.<br />
-<div class="js-spoilerbox bbcode-spoilerbox"><button class="js-spoilerbox__link bbcode-spoilerbox__link" type="button"><i class="fas fa-fw fa-chevron-right bbcode-spoilerbox__arrow"></i>First!</button><div class="bbcode-spoilerbox__body">Packed box.</div></div>
+<div class="js-spoilerbox bbcode-spoilerbox"><button class="js-spoilerbox__link bbcode-spoilerbox__link" type="button"><span class="bbcode-spoilerbox__link-icon"></span><span class="bbcode-spoilerbox__link-text">First!</span></button><div class="bbcode-spoilerbox__body">Packed box.</div></div>
 Bottom line text.<br />
 <br />
 Prefix text.
-<div class="js-spoilerbox bbcode-spoilerbox"><button class="js-spoilerbox__link bbcode-spoilerbox__link" type="button"><i class="fas fa-fw fa-chevron-right bbcode-spoilerbox__arrow"></i>Second box</button><div class="bbcode-spoilerbox__body">Inline box (except it's not).</div></div>
+<div class="js-spoilerbox bbcode-spoilerbox"><button class="js-spoilerbox__link bbcode-spoilerbox__link" type="button"><span class="bbcode-spoilerbox__link-icon"></span><span class="bbcode-spoilerbox__link-text">Second box</span></button><div class="bbcode-spoilerbox__body">Inline box (except it's not).</div></div>
 Suffix text.<br />
 <br />
 Upper line text.<br />
 <br />
-<div class="js-spoilerbox bbcode-spoilerbox"><button class="js-spoilerbox__link bbcode-spoilerbox__link" type="button"><i class="fas fa-fw fa-chevron-right bbcode-spoilerbox__arrow"></i>Third box</button><div class="bbcode-spoilerbox__body">Box with blank lines.</div></div>
+<div class="js-spoilerbox bbcode-spoilerbox"><button class="js-spoilerbox__link bbcode-spoilerbox__link" type="button"><span class="bbcode-spoilerbox__link-icon"></span><span class="bbcode-spoilerbox__link-text">Third box</span></button><div class="bbcode-spoilerbox__body">Box with blank lines.</div></div>
 <br />
 Bottom line text.
